--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
     "cuid": "^2.1.8",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-addons-linked-state-mixin": "^15.6.2",
     "react-bootstrap": "^2.0.0-beta.4",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
