--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "questionnaire-react",
+  "homepage": "https://justdaile.github.io/Questionnaire-ReactJS",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -8,7 +9,6 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
     "cuid": "^2.1.8",
-    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-addons-linked-state-mixin": "^15.6.2",
     "react-bootstrap": "^2.0.0-beta.4",
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
